testsuite/tests/dependent/should_fail/BadTelescope4.stderr

BadTelescope4.hs:9:1: error:
    • These kind and type variables: a
                                     (c :: Proxy b)
                                     (d :: Proxy a)
                                     (x :: SameKind b d)
      are out of dependency order. Perhaps try this ordering:
        k
        (a :: k)
        (b :: Proxy a)
        (c :: Proxy b)
        (d :: Proxy a)
        (x :: SameKind b d)
      NB: Implicitly declared variables come before others.
    • In the data type declaration for ‘Bad’
